Fix link dropdown block behavior for desktop and alignment for mobile

--- a/themes/jeo-theme/assets/scss/6-widgets/_w-linkDropdown.scss
+++ b/themes/jeo-theme/assets/scss/6-widgets/_w-linkDropdown.scss
@@ -4,12 +4,17 @@
     }
 
     .controls {
-        cursor: pointer;
         display: flex;
         flex-direction: row;
 
         .arrow-icon {
+            display: none;
             margin: auto size(10);
+            margin-left: auto;
+
+                @include mobile {
+                    display: block;
+                }
         }
 
         .dropdown-title {
@@ -44,8 +49,10 @@
     }
 
     .sections.saved-block {
-        height: 0;
-        overflow: hidden;
-        opacity: 0;
+        @include mobile {
+            height: 0;
+            overflow: hidden;
+            opacity: 0;
+        }
     }
 }
